# Downloads-Sort

./: CMakeLists.txt  NOTICES  README.md  build.sh  config.cpp  config.hpp  toml.hpp
.github/workflows/: cmake.yml
headers/: config.hpp  sort.hpp
src/: config.cpp  main.cpp  sort.cpp
